--- a/src/app/estimate/estimate.component.html
+++ b/src/app/estimate/estimate.component.html
@@ -1,5 +1,12 @@
-<h1>Obtenir un devis d'assurance auto</h1>
-  <h3>Simple, rapide et gratuit</h3>
-  <button class="btn btn-primary" (click) = "goToUrl()">Par téléphone</button>
-  <button class="btn btn-primary"  (click) = "goToUrl()">Par email</button>
- 
+<div class="background">
+  <div class="survey-content">
+    <div>
+      <h1>Obtenir un devis d'assurance auto</h1>
+      <h3>Simple, rapide et gratuit</h3>
+    </div>
+    <div class="btn-container">
+      <button class="btn btn-primary" (click)="goToUrl()">Par téléphone</button>
+      <button class="btn btn-primary" (click)="goToUrl()">Par email</button>
+    </div>
+  </div>
+</div>
