--- a/src/app/estimate/estimate.component.css
+++ b/src/app/estimate/estimate.component.css
@@ -1,5 +1,6 @@
 .background{
-    background: linear-gradient(#e59600, #c28e0a);
+    /* background: linear-gradient(#e59600, #c28e0a); */
+    background: linear-gradient(rgba(255,255,255,.2), rgba(255,255,255,.2)), url("./../../assets/background.jpg");
     background-size: cover;
     height: 100vh;
     width: 100vw;
@@ -29,7 +30,7 @@
 }
 
 .survey-content{
-    background-color: rgba(255, 255, 255, .6);
+    background-color: rgba(255, 255, 255, .8);
     border-radius: 15px;
     box-shadow: 0px 0px 10px 1px;
     height: 64vh;
