--- a/src/app/survey/survey.component.css
+++ b/src/app/survey/survey.component.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 .background{
-    background: linear-gradient(#e59600, #c28e0a);
+    background: linear-gradient(rgba(255,255,255,.2), rgba(255,255,255,.2)), url("./../../assets/back-assurance.jpg");
     background-size: cover;
     height: 100vh;
     width: 100vw;
@@ -43,7 +43,7 @@ h1 {
 }
 
 .survey-content{
-    background-color: rgba(255, 255, 255, .6);
+    background-color: rgba(255, 255, 255, .9);
     border-radius: 15px;
     box-shadow: 0px 0px 10px 1px;
     display: inline-block;
