--- a/src/app/survey/survey.component.css
+++ b/src/app/survey/survey.component.css
@@ -2,7 +2,8 @@
 .icons{
     display:flex; 
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    margin-bottom: 4em;
 
 }
 
