--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -1,51 +1,65 @@
 <div class="background">
   <div class="survey-content">
     <ng-container [ngSwitch]="valeur">
+
+      <!-- Container qui s'affiche par défaut au démarrage de l'application s'il y a un sondage en cours-->
       <ng-container *ngSwitchDefault>
         <div class="title">
           <h1>Voudriez-vous adhérer à un service d'assurance automobile Proxibanque ?</h1>
         </div>
         <div class="icons">
-          <!-- Penser à désactiver/faire disparaître les icones -->
-          <!-- <img class="icon green" src="./assets/yes.svg" (click)="positive()"> -->
           <i class="material-icons" (click)="positive()" id="ok">thumb_up</i>
           <i class="material-icons" (click)="negative()" id="ko">thumb_down</i>
-          <!-- <img class="icon red" src="./assets/no.svg" (click)="negative()"> -->
         </div>
       </ng-container>
 
-      <!-- Partie pour le commentaire positif-->
+      <!-- Partie pour le commentaire positif lorsque l'utilisateur clique sur le pouce vert-->
       <div>
         <ng-container *ngSwitchCase="1">
-          <div class="container">
+          <div class="container flex">
+
+            <!-- Formulaire pour un utilisateur déjà client de ProxiBanque-->
             <div class="form-left">
               <h4>Déjà client ? Veuillez saisir votre identifiant client à 8 chiffres</h4>
+
               <form (ngSubmit)="checkClient(posCom)" #posCom="ngForm">
                 <label for="clientNum">Votre identifiant client :</label>
-                <input type="text" [(ngModel)]="modelClient.clientNum" id="clientNum" name="clientNum" class="form-control"
-                  required>
+                <input type="text" pattern="[0-9]{8}" placeholder="12345678" [(ngModel)]="modelClient.clientNum" id="clientNum"
+                  name="clientNum" class="form-control" required>
                 <button class="btn btn-success" [disabled]="posCom.invalid">Valider</button>
               </form>
+
+              <!--Affichage de ce message si le client valide un formulaire invalide.-->
               <ng-container *ngIf="!oldClientOk">
                 Identifiant invalide. Veuillez saisir un numero valide.
               </ng-container>
             </div>
 
+            <!-- Formulaire pour un nouveau client potentiel-->
             <div class="form-right">
               <h4>Nouveau client ? Veuillez saisir les informations suivantes</h4>
+
               <form (ngSubmit)="validateAndSend(newCli)" #newCli="ngForm">
-                <label for="lastName">Nom :</label>
-                <input type="text" [(ngModel)]="modelClient.lastName" id="lastName" name="lastName" class="form-control"
-                  required>
                 <label for="firstName">Prénom :</label>
-                <input type="text" [(ngModel)]="modelClient.firstName" id="firstName" name="firstName" class="form-control"
-                  required>
+                <input type="text" placeholder="Veuillez saisir votre prénom ici" [(ngModel)]="modelClient.firstName"
+                  id="firstName" name="firstName" class="form-control" required>
+
+                <label for="lastName">Nom :</label>
+                <input type="text" placeholder="Veuillez saisir votre nom ici" [(ngModel)]="modelClient.lastName" id="lastName"
+                  name="lastName" class="form-control" required>
+                  
                 <label for="telNum">Numéro de téléphone :</label>
-                <input type="tel" pattern="0[1-7]{1}[0-9]{8}" [(ngModel)]="modelClient.telNum" id="telNum" name="telNum" class="form-control">
+                <input type="tel" pattern="0[1-7]{1}[0-9]{8}" placeholder="Veuillez saisir votre numéro de téléphone ici"
+                  [(ngModel)]="modelClient.telNum" id="telNum" name="telNum" class="form-control">
+
                 <label for="email">Email :</label>
-                <input type="email" [(ngModel)]="modelClient.email" id="email" name="email" class="form-control">
+                <input type="email" pattern=".+@.+\.(.{2,3}|.{2}\..{2})" placeholder="example@proxibanque.fr" [(ngModel)]="modelClient.email"
+                  id="email" name="email" class="form-control">
+                  
                 <button class="btn btn-success" [disabled]="newCli.invalid">Valider</button>
               </form>
+
+              <!--Affichage de ce message si le client valide un formulaire invalide.-->
               <ng-container *ngIf="!newClientOk">
                 Veuillez saisir au moins un numéro de téléphone ou une adresse mail.
               </ng-container>
@@ -53,19 +67,23 @@
           </div>
         </ng-container>
 
-
-        <!-- Partie pour le commentaire négatif-->
+        <!-- Partie pour le commentaire négatif lorsque l'utilisateur clique sur le pouce rouge-->
         <ng-container *ngSwitchCase="2">
+
           <form (ngSubmit)="validateNegCom(negCom)" #negCom="ngForm" class="flex-form">
             <div class="form-group perso-form">
-              <label for="comment">Laissez-nous votre avis !</label>
-              <textarea type="text" [(ngModel)]="modelAnswer.comment" id="comment" name="comment" class="form-control"></textarea>
+              <label for="comment" id="textNeg">Pourriez-vous expliquer pourquoi vous ne seriez pas intéressé ?<br> Laissez-nous
+                votre avis !</label>
+              <textarea rows="8" cols="100" id="negCom" type="text" [(ngModel)]="modelAnswer.comment" id="comment" name="comment"
+                class="form-control"></textarea>
               <button class="btn btn-success">Envoyer</button>
             </div>
           </form>
+
         </ng-container>
       </div>
 
+      <!-- Partie affichée une fois que l'utilisateur a posté son commentaire (positif ou négatif)-->
       <ng-container *ngSwitchCase="3">
         <div class="end-content">
           <h3>{{endMessage}}</h3>
@@ -74,19 +92,3 @@
     </ng-container>
   </div>
 </div>
-
-
-<!--
-  class="form-group"
-  class="form-control"
-  <form class="example-form">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Favorite food" value="Sushi">
-  </mat-form-field>
-
-  <mat-form-field class="example-full-width">
-    <textarea matInput placeholder="Leave a comment"></textarea>
-  </mat-form-field>
-</form>
-
--->
