--- a/src/app/survey/survey.component.css
+++ b/src/app/survey/survey.component.css
@@ -44,10 +44,11 @@ h1 {
 }
 
 .survey-content{
-    background-color: rgba(255, 255, 255, .9);
+    background-color: rgba(255, 255, 255,.75);
     border-radius: 15px;
     box-shadow: 0px 0px 10px 1px;
     display: inline-block;
+    margin-bottom: 2em;
 }
 
 .flex-form{
