--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -73,7 +73,7 @@
           <form (ngSubmit)="validateNegCom(negCom)" #negCom="ngForm" class="flex-form">
             <div class="form-group perso-form">
               <label for="comment" id="textNeg">Pourriez-vous expliquer pourquoi vous ne seriez pas intéressé ?<br> Laissez-nous
-                votre avis !</label>
+                un commentaire !</label>
               <textarea rows="8" cols="100" id="negCom" type="text" [(ngModel)]="modelAnswer.comment" id="comment" name="comment"
                 class="form-control"></textarea>
               <button class="btn btn-success">Envoyer</button>
